<resources>
    <string name="app_name">Movies</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort_by_popularity">Most Popular</string>
    <string name="action_sort_by_rating">Highest Rated</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="rating">Rating</string>
    <string name="release_date">Released</string>
    <string name="details">Details</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="action_favorite">Favorite</string>
    <string name="content_authority">com.ahmed.movies</string>
    <string name="removed_from_favorites">Deleted</string>
    <string name="added_to_favorites">Added</string>
    <string name="action_sort_by_favorite">Favorites</string>
    <string name="action_share">Share</string>
    <string name="tmdb_api_key">352434525336a03d701d720bb9206b98</string>
</resources>
